--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+
 }
 
 android {
@@ -68,4 +69,6 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.5.0'
     implementation 'androidx.room:room-ktx:2.5.0'
     implementation 'androidx.room:room-paging:2.5.0'
+
+    implementation("com.squareup.moshi:moshi-kotlin:1.14.0")
 }
